uabunited/site-specific.css
/*#region Overrides */

/*hides mobile search icon - it was causing a spacing issue on desktop.  This needs to be removed if site search is being used.*/
#trigger {
    display:none !important;
}

/*adds extra padding to site name area*/
#whitebar {
    padding: 10px 0;
}

/*#endregion Overrides */


/*--------#region Page Header--------*/
body.linear.hd.base .topLinearContainer {
    background: #144b39;
}

#hidden-links {
    z-index: 0;
}

#hidden-links a.un_jtt_hide {
    display: flex;
    top: 0;
}

/*hides site name, search bar, and quicklinks on homepage*/
/*.fight-covid-homepage #whitebar {
    display: none;
}*/

/*hides page header on homepage*/
/*.fight-covid-homepage .page-header {
    display: none;
}*/

#wrapper {
    display: flex;
    flex-direction: column;
}

#banner {
    margin: 0;
    order: 1;
}

.navbar {
    order: 2;
}

#whitebox {
    order: 3;
}

.covidAlert {
    order: 4;
}

.page-header {
    max-width: 1280px;
    margin: 30px auto 0;
}

@media all and (max-width:1280px) {
    .page-header {
        margin: 30px 20px 0;
    }
}

.external-link:after {
    content: "\e251";
    content: "\e024";
    font-family: IcoMoon;
    font-weight: 400 !important;
    margin-left: 5px;
    font-size: 1.1rem
}

/*Quicklinks & UAB Header*/
@media all and (min-width:1024px) {
    /* body.linear.hd div.searchpanel {
        width: 100%;
        position: absolute;
        top: 0;
        left: 50%;
        transform: translatex(-50%);
        max-width: 1280px;
    }

    #quicklinks {
        margin-top: 0 !important;
        max-width: 1280px;
        margin-right: 30px;
    } */

    body.linear.hd #quicklinks .nav.menu.nav-pills>li>.separator {
        color: #fff;
    }

    #quicklinks .separator:after {
        content: "\e011";
        font-family: 'IcoMoon';
        font-size: .8em;
    }
}

#quicklinks ul.nav li {
    float: right;
}

/*@media all and (min-width: 1024px) {
    body.linear.hd #quicklinks {
        display: flex;
        flex-direction: row-reverse;
        justify-content: flex-start;
        margin-top: 0.75em;
    }
}*/

body.linear.hd #siteName {
    max-width: 1280px;
    width: 100%;
    margin: 0 auto;
    float: none;
}

body.linear.hd .siteNameTop {
    color: #fff;
}

body.ribbonFullwidth #whitebar {
    height: auto;
    border-bottom-width: 0px !important;
}

/*Displays separator menu items in mobile*/
@media (max-width: 980px) {
    body.hd #tray.white #ribbon li span {
        display: inline-block;
        color: #1E6B52 !important;
    }
}






/*Adds green background before and after the site name and quicklinks */
#whitebar {
    position:relative;
}
#whitebar:before {
    content:'';
    background-color: #1E6B52;
    width:4000px;
    height:100%;
    display:block;
    position:absolute;
    left:-4000px;
    top:0;
    bottom:0
}

#whitebar:after {
    content:'';
    background-color: #1E6B52;
    width:4000px;
    height:100%;
    display:block;
    position:absolute;
    right:-4000px;
    top:0;
    bottom:0
}




/*Add max-width on site name and quicklinks and verticaly center */
#whitebar {
max-width:1280px !important;
display:flex;
align-items: center;
}

/*Quicklinks adjustments */

#quicklinks {
display:flex;   
align-items:center;
float:none;
}

#quicklinks input {
border-radius:0;
margin-bottom:0;
border-right:0;
}

#quicklinks .moduletable {
height:auto;
}

body.linear.hd #quicklinks {
margin-top:0;
}

/*Adjustments to search */

.searchpanel .form-inline {
display:flex;
justify-content: center;    
align-items: center;
margin-right:20px;
}

.searchpanel  .btn-primary {
border-radius:0;
text-shadow:none;
background-image:none;
border-left:0;
}

/*Change out uab logo for an svg */
body.linear.hd div.topLinearLogo {
    background-image: url(https://dev.uab.edu/uabunited/extreme-horizontal-white.svg) ;
   height: 17px ;
}

/*Remove quicklinks on mobile */
@media all and (max-width:1024px) {
    #quicklinks .nav {
        display:none;
    }
}

/*Remove search panel from displaying on hover */
body.linear.hd div.searchpanel {
    float:none; 
    width:auto;
    display:block; 
    background:none;
    box-shadow:none;
    margin-right:.5em;
    flex-basis:50%;
}



/*--------#endregion Page Header--------*/

